--- a/templates/reg.html
+++ b/templates/reg.html
@@ -10,8 +10,15 @@
     <nav>
         <div class="navbar">
             <a href="/">Главная</a>
+
+            {% if session['user_id'] != none: % }
+            <a href="/profile">Профиль</a>
+            <button>Выйти</button>
+
+            {% else: % }
             <a href="/login">Войти</a>
             <a href="/reg">Зарегистрироваться</a>
+
         </div>
     </nav>
 
