--- a/templates/reg.html
+++ b/templates/reg.html
@@ -11,14 +11,14 @@
         <div class="navbar">
             <a href="/">Главная</a>
 
-            {% if session['user_id'] != none: % }
+            {% if session['user_id'] != none: %}
             <a href="/profile">Профиль</a>
             <button>Выйти</button>
 
-            {% else: % }
+            {% else: %}
             <a href="/login">Войти</a>
             <a href="/reg">Зарегистрироваться</a>
-
+            {% endif %}
         </div>
     </nav>
 
