--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
 
             {% if session['user_id'] != none: %}
             <a href="/profile">Профиль</a>
-            <button>Выйти</button>
+            <a href="/logout">Выйти</a>
 
             {% else: %}
             <a href="/login">Войти</a>
