--- a/templates/reg.html
+++ b/templates/reg.html
@@ -13,7 +13,7 @@
 
             {% if session['user_id'] != none: %}
             <a href="/profile">Профиль</a>
-            <button>Выйти</button>
+            <a href="/logout">Выйти</a>
 
             {% else: %}
             <a href="/login">Войти</a>
