--- a/templates/login.html
+++ b/templates/login.html
@@ -31,6 +31,9 @@
         <p>Пароль</p>
         <input name="password" type="password">
         <div class="btn">
+            {% for err in get_flashed_messages() %}
+            <p>{{err}}</p>
+            {% endfor %}
             <button class="">Войти</button>
         </div>
     </form>
