--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,9 @@
             <option value="access_privat">Приватный</option>
         </select>
         <div class="btn">
+            {% for err in get_flashed_messages() %}
+            <p>{{err}}</p>
+            {% endfor %}
             <button class="btn-short">Сократить</button>
         </div>
     </div>
