--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 
         </div>
     </nav>
-    <div class="main" method="post">
+    <form class="main" method="post">
         <h1>СОКРАТИТЕЛЬ</h1>
         <div class="links">
             <p>Полная ссылка</p>
@@ -47,7 +47,7 @@
             {% endfor %}
             <button class="btn-short">Сократить</button>
         </div>
-    </div>
+    </form>
 
 </body>
 
