--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,6 +22,11 @@
         </div>
     </nav>
 
+    <div>
+        <% for i in userUrl %>
+            <p>{{i[0]}}</p>
+        <% endfor %>
+    </div>
 
 </body>
 </html>
