--- a/templates/static/css/style.css
+++ b/templates/static/css/style.css
@@ -69,12 +69,6 @@ top: 56px;
 z-index: -1;
 width: 480px;
 }
-.table{
-border: 1px solid black
-}
-tr{
-border: 1px solid black
-}
-th{
+.table, tr, th, td{
 border: 1px solid black
 }
